--- a/index.html
+++ b/index.html
@@ -6,6 +6,12 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Team 언저리 소개 페이지</title>
   <link rel="stylesheet" href="style.css" />
+  <!-- jQuery 설정 -->
+  <script type="module" src="https://code.jquery.com/jquery-3.7.1.slim.js"
+    integrity="sha256-UgvvN8vBkgO0luPSUl2s8TIlOSYRoGFAX4jlCIm9Adc=" crossorigin="anonymous"></script>
+  <!-- 파이어베이스 설정 -->
+  <script type="module" src="./scripts/firebaseConfig.js"></script>
+
 </head>
 
 <body style="background-color: #f0eada">
@@ -14,7 +20,7 @@
   <!-- header -->
   <div class="header">
     <div id="logo">
-      <img width="100%" src="static/images/logo.webp" />
+      <img width="100%" src="static/images/logo.png" />
     </div>
     <div id="team-introduce-text">
       <h2>우리팀은...</h2>
@@ -25,7 +31,7 @@
     <div style="margin-top: 5px">
       <a href="https://github.com/durururuk/Team-Introduce-Page"><img src="static//images/githubImage.png"
           id="image" /></a>
-      <a href="/Team-Introduce-Page/index.html"><img src="static//images/notion.png" id="image" /></a>
+      <a href="https://www.notion.so/teamsparta/22-99cc5437695248e3ba2fcf91252d1fa0"><img src="static//images/notion.png" id="image" /></a>
     </div>
   </div>
 
@@ -35,14 +41,14 @@
       <h1>팀 규칙</h1>
     </div>
     <ul id="rulecontent">
-      <li id="rule">ZEP 09:00까지 접속(22조 테이블)</li>
-      <li id="rule">점심시간 12:00 ~ 13:00</li>
-      <li id="rule">스파르타코딩클럽 강의 듣기 09:00 ~ 12:00</li>
-      <li id="rule">저녁시간 18:00 ~ 19:00</li>
-      <li id="rule">21:00 ~ 23:59 퇴실처리 !</li>
-      <li id="rule">모르는 거 생기면 서로서로 질문하고 답해주기 !</li>
-      <li id="rule">답답해도 화내지 않기 !</li>
-      <li id="rule">자리 비울 때 (10분이내 복귀 제외) 팀원들에게 꼭 ! ! ! 말하기 !</li>
+      <li class="rule">ZEP 09:00까지 접속(22조 테이블)</li>
+      <li class="rule">점심시간 12:00 ~ 13:00</li>
+      <li class="rule">스파르타코딩클럽 강의 듣기 09:00 ~ 12:00</li>
+      <li class="rule">저녁시간 18:00 ~ 19:00</li>
+      <li class="rule">21:00 ~ 23:59 퇴실처리 !</li>
+      <li class="rule">모르는 거 생기면 서로서로 질문하고 답해주기 !</li>
+      <li class="rule">답답해도 화내지 않기 !</li>
+      <li class="rule">자리 비울 때 (10분이내 복귀 제외) 팀원들에게 꼭 ! ! ! 말하기 !</li>
     </ul>
     <img src="./static/images/rules.jpg" id="rules-image" />
   </div>
@@ -50,135 +56,70 @@
   <!-- 팀소개 -->
   <div class="team-introduce">
     <div>
-      <h1 class="team-introduce-title">우리 팀을 소개합니다 !</h1>
-      <ul class="teams" onclick="handleMemberProfileClick(event)">
-        <li id="team"><img src="./static/images/team1.jpg" /></li>
-        <li id="team"><img src="./static/images/team2.jpg" /></li>
-        <li id="team"><img src="./static/images/team3.jpg" /></li>
-        <li id="team"><img src="./static/images/team4.jpg" /></li>
+      <h1 id="team-introduce-title">우리 팀을 소개합니다 !</h1>
+      <ul class="teams">
+        <li class="team"><img width=100% src="./static/images/team1.jpg" /></li>
+        <li class="team"><img width=100% src="./static/images/team2.jpg" /></li>
+        <li class="team"><img width=100% src="./static/images/team3.jpg" /></li>
+        <li class="team"><img width=100% src="./static/images/team4.jpg" /></li>
       </ul>
     </div>
   </div>
 
   <!-- 방명록 -->
-  <div class="guest-book">방명록 예정</div>
+  <div class="guest-book">
+    <h1 id="GBtitle"> 응원 메세지! <br></h1>
+    <!-- 게시물 작성창 -->
 
-  <!-- 모달 -->
-  <div id="myModal" class="modal">
-    <div class="modal-content">
-      <span class="close">&times;</span>
-      <p id="modal-text"></p>
+    <div class="posting">
+      <p>이름 <input type="text" size=5 id="name"> &emsp;
+        비밀번호 <input type="text" size=10 id="password"></p>
+      <p>&nbsp;<textarea placeholder="140자 내로 내용을 입력해주세요." maxlength="140" id="postingcontent"></textarea></p>
+      <button id="submit">등록</button>
+      <script type="module" src="./scripts/post.js"></script>
     </div>
+
+    <!-- 게시물 조회 -->
+    <div class="posts">
+      <script type="module" src="./scripts/read.js"></script>
+    </div>
+
+    <!-- 게시물 수정 -->
+    <script type="module" src="./scripts/update.js"></script>
+
+    <!-- 게시물 삭제 -->
+    <script type="module" src="./scripts/delete.js"></script>
   </div>
+
+  <!-- 모달  !!!!제일 아래에 있어야 함!!!!!!!!!-->
+  <div>
+    <div id="myModal" class="modal">
+      <div class="modal-content">
+        <span class="close">&times;</span>
+        <p id="modal-text"></p>
+      </div>
+    </div>
+
+    <script type="module">
+      import { handleMemberProfileClick, initModalClose } from './scripts/memberIntroduce.js';
+
+      document.addEventListener("DOMContentLoaded", () => {
+        initModalClose();
+        const listItems = document.querySelectorAll("ul li img");
+        listItems.forEach(item => {
+          item.addEventListener("click", handleMemberProfileClick);
+        });
+      });
+    </script>
+  </div>
+
+
+
 </body>
 
-</html>
-
-<script>
-  //이미지 클릭
-  function handleMemberProfileClick(e) {
-    const membersImage = {
-      "./static/images/team1.jpg": "team1",
-      "./static/images/team2.jpg": "team2",
-      "./static/images/team3.jpg": "team3",
-      "./static/images/team4.jpg": "team4",
-    };
-    const membersInfo = {
-      team1: {
-        name: "",
-        mbti: "",
-        comment: "",
-        blog: "",
-        photo: "",
-        pro: "",
-        pstyle: "",
-        cstyle: ""
-      },
-      team2: {
-        name: "신승재",
-        mbti: "INFP",
-        comment: "잘 부탁드립니다..!",
-        blog: "durururuk.tistory.com",
-        photo: "https://images.chosun.com/resizer/PeHDAksF_KhyIrmk5Qm2vkWTCjU=/464x0/smart/cloudfront-ap-northeast-1.images.arcpublishing.com/chosun/B4NDUDUIFKMU4RDHCV2WP2IOMM.jpg",
-        pro: "무엇을 검색해야 원하는 것을 찾을 수 있을지 구글링을 잘 한다고 생각합니다",
-        pstyle: "문제가 생겼을 때 잡히는대로 수정하지 않고 이유를 알고 해결하고싶습니다.",
-        cstyle: "제가 짠 코드를 누가 보더라도 코드를 이해할 수 있게 짜고싶습니다."
-
-      },
-      team3: {
-        name: "",
-        mbti: "",
-        comment: "",
-        blog: "",
-        photo: "",
-        pro: "",
-        pstyle: "",
-        cstyle: ""
-      },
-      team4: {
-        name: "",
-        mbti: "",
-        comment: "",
-        blog: "",
-        photo: "",
-        pro: "",
-        pstyle: "",
-        cstyle: ""
-      },
-    };
-    const imgElement = e.target.closest("li").querySelector("img");
-    const imgSrc = imgElement.getAttribute("src");
-    const member = membersImage[imgSrc];
-
-    const favDialog = document.getElementById("favDialog");
-    const number = document.getElementById("number");
-    const modal = document.getElementById("myModal");
-    const modalText = document.getElementById("modal-text");
-    // 모달 창 안으로 들어갈 html
-    modalText.innerHTML = `
-    <div class="innerModal">
-        <div class="top-content">
-            <div >
-                <img id=mphoto
-                    src=${membersInfo[member].photo}>
-            </div>
-
-            <div id=simpleProfile>
-                <p>이름 : ${membersInfo[member].name}</p>
-                <p>MBTI : ${membersInfo[member].mbti}</p>
-                <p>코멘트 : ${membersInfo[member].comment}</p>
-                <p>블로그 주소 : ${membersInfo[member].blog}</p>
-            </div>
-        </div>
-        <div id=detailedProfile>
-            <p>객관적으로 살펴본 자신의 장점 : ${membersInfo[member].pro} </p>
-            <p>자신의 스타일 : ${membersInfo[member].pstyle} </p>
-            <p>협업 스타일 소개 : ${membersInfo[member].cstyle} </p>
-
-        </div>
-    </div>
-
-    
-    `;
-    modal.style.display = "block";
-  }
-
-  document.addEventListener('DOMContentLoaded', () => {
-    const modal = document.getElementById("myModal");
-    const span = document.getElementsByClassName("close")[0];
-
-    span.onclick = function () {
-      modal.style.display = "none";
-    }
-
-    window.onclick = function (event) {
-      if (event.target == modal) {
-        modal.style.display = "none";
-      }
-    }
-  });
-</script>
 
 <style>
   @import url("https://fonts.googleapis.com/css2?family=Dongle&display=swap");
 </style>
+
+</html>
